--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "antd": "^4.9.1",
     "flatlist-react": "^1.4.3",
     "react": "^17.0.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
     "react-infinite-scroller": "^1.2.4",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "recharts": "^1.8.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
