--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.9.1",
+    "bootstrap": "^4.5.3",
+    "chartist": "^0.11.4",
     "flatlist-react": "^1.4.3",
+    "jfile": "^1.1.12",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-chartist": "^0.14.3",
     "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
     "react-infinite-scroller": "^1.2.4",
