--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     "chartist": "^0.11.4",
     "flatlist-react": "^1.4.3",
     "jfile": "^1.1.12",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-chartist": "^0.14.3",
     "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-pro-sidebar": "^0.5.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "recharts": "^1.8.5",
-    "web-vitals": "^0.2.4"
+    "semantic-ui-react": "^2.0.1",
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,5 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
