--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "antd": "^4.9.1",
     "bootstrap": "^4.5.3",
     "chartist": "^0.11.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16.1": "^1.6.3",
     "flatlist-react": "^1.4.3",
     "jfile": "^1.1.12",
     "node-sass": "^5.0.0",
@@ -52,5 +54,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+   
+  }
 }
