--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-text-loop": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
